Ultima version proyecto

--- a/HtmlCssJscript/index.html
+++ b/HtmlCssJscript/index.html
@@ -17,7 +17,7 @@
             <ul class="menu">
                 <li><a href="#sobre-mi">Programacion Web</a></li>
                 <li><a href="#proyectos">Practicas</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#contacto">Preguntas y comentarios</a></li>
             </ul>
         </nav>
     </header>
@@ -31,18 +31,20 @@
         </section>
 
         <div class="perfil">
-            <a href="https://github.com/AspisCatalan/programacionweb_2025_1" target="_blank">
-                <img src="imagenes/servicios-de-programacion-web-a-medida.jpg" alt="programacion web">
-            </a>
+                <img src="imagenes/servicios-de-programacion-web-a-medida.jpg" alt="programacion web"> 
         </div>
 
         <section id="proyectos">
+            <br><br>
             <h1>Practicas</h1>
             <p>Presentamos las practicas realizados en clase:</p>
+            <p>Para ver los proyectos, da clic en uno.</p>
             <div class="proyectos-lista">
                 <article class="proyecto">
-                    <img src="imagenes/tags-html5.jpg">
-                    <p>El Lenguaje de Marcado de Hipertexto (HTML) es el código que se utiliza para estructurar y desplegar una página web y sus contenidos. Por ejemplo, sus contenidos podrían ser párrafos, una lista con viñetas, o imágenes y tablas de</p>
+                    <a href="https://github.com/AspisCatalan/programacionweb_2025_1/tree/main/1_HTML" target="_blank">
+                        <img src="imagenes/tags-html5.jpg">
+                    </a>
+                    <p>HTML (Hypertext Markup Language): es el código que se utiliza para estructurar y desplegar una página web y sus contenidos. Por ejemplo, sus contenidos podrían ser párrafos, una lista con viñetas, o imágenes y tablas de</p>
                     <ol class="links">
                         <li><a href="../1_HTML/file1/index.html" target="_blank">Presentacion</a></li>
                         <li><a href="../1_HTML/file2_ElaboraciondeTitulos/index.html" target="_blank">Elaboracion de Titulos</a></li>
@@ -57,9 +59,11 @@
                 </article>
                 
                 <article class="proyecto">
-                    <img src="imagenes/css3-logo.webp">
+                    <a href="https://github.com/AspisCatalan/programacionweb_2025_1/tree/main/2_CSS" target="_blank">
+                        <img src="imagenes/css3-logo.webp">
+                    </a>
                     <p>CSS (Cascading Style Sheets): Este lenguaje te permite darle estilo y diseño a tu página web. Es como la ropa que vistes para lucir bien.
-                        (como fuentes, colores, tamaños, etc.) separados de los que configuran el contenido).
+                        (como fuentes, colores, tamaños, etc.) separados de los que configuran el contenido.
                     </p>
 
                     <ol class="links">
@@ -82,10 +86,15 @@
                 
             </div>
             <p>Si quieres conocer mas de los practicas te invitamos a ingresar a nuestro <a href="https://github.com/AspisCatalan/programacionweb_2025_1" target="_blank"><strong>Repositorio</strong></a> en GitHub. </p>
-
+            <div class="git">
+                <a href="https://github.com/AspisCatalan/programacionweb_2025_1/" target="_blank">
+                    <img src="imagenes/Octicons-mark-github.svg.png">
+                </a>
+            </div>
         </section>
 
         <section id="contacto">
+            <br><br>
             <h1>Preguntas y comentarios</h1>
             <form id="contact-form">
                 <label for="nombre">Nombre:</label>
